# psp-prx-gen

./: CMakeLists.txt  README.md  cube.elf  elftypes.h  psp-prxgen.c  types.h
cube/: Makefile  cube.c  cube.elf  cube.prx  cubeprx.elf  prxgen
cube/devkit/: psp_test.prx  test.elf
prxgen-dbg/: CMakeLists.txt  elftypes.h  prxtypes.h  psp-prxgen.c
prxtool/: Makefile  Makefile.in  ProcessElf.C  _stdint.h  aclocal.m4  config.h  config.h.in~  config.status  configure~  prxtool
prxtool/.deps/: NidMgr.Po  ProcessElf.Po  ProcessPrx.Po  SerializePrx.Po  SerializePrxToIdc.Po  SerializePrxToMap.Po  SerializePrxToXml.Po  VirtualMem.Po  disasm.Po  getargs.Po  main.Po  output.Po  pspkerror.Po  tinystr.Po  tinyxml.Po  tinyxmlerror.Po  tinyxmlparser.Po
prxtool/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
